* default threshold for `filter_stats()` is now 1e+6
* `mlg.filter()` now returns a list instead of a pairlist
* the "hist" argument for `poppr()` is now deprecated in favor of "plot"
* documentation improvements
* the show method for snpclone objects now looks distinct from genlight
* genlight objects no longer get passed to `missingno()` in `filter_stats()`

BUG FIX
------------

* When supplied an object with no strata, `clonecorrect()` will default to
  `strata = NA`.

poppr 2.1.0
===========

IMPROVEMENTS
-----------

* `win.ia` and `samp.ia` gain a significant speedup thanks to Jonah Brooks
  implementing the code in C.
* The internal code for the `genotype_curve` has been implemented in C for a 10x
  increase in speed.

NEW FEATURES
-----------

* `poppr.msn`, `bruvo.msn`, and `plot_poppr_msn` gain the ability to take
  character vectors for color palettes. See issue #55
  (https://github.com/grunwaldlab/poppr/issues/55) for details.
* `plot_poppr_msn` returns the modified graph.
* All functions related to Bruvo's distance can now take a named vector of
  repeat lengths in any order. See issue #61
  (https://github.com/grunwaldlab/poppr/issues/61) for details.
* `aboot` gains the argument strata so that you can automatically convert genind
  to genpop.
* `genotype_curve` can now take in loci objects from pegas.
* You can now specify the maximum number of loci to analyze in `genotype_curve`.
* `filter_stats` can now optionally plot a histogram in the background.
* `bruvo.dist` can now optionally return distance matrices by locus. This is
  addresed in issue #60 (https://github.com/grunwaldlab/poppr/issues/60)
* `aboot` can now handle matrices as previously specified in the documentation.
* `aboot` can now take custom functions to calculate distance for genlight 
  objects.
* `poppr.amova` can now perform amova using the pegas implementation.

NEW FUNCTIONS
-----------

* `rrmlg` will calculate round-robin multilocus genotypes for each locus.